--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,52 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+	margin: 0;
+	padding: 0;
+	font-family: Helvetica, Arial, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+		sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	/* background-color: #8fa6cb; */
+	background: linear-gradient(360deg, #7d84b2, #8fa6cb);
+	background-size: 400% 400%;
+	animation: gradientFade 3s ease infinite;
+}
+
+@keyframes gradientFade {
+	0% {
+		background-position: 47% 0%;
+	}
+	50% {
+		background-position: 54% 100%;
+	}
+	100% {
+		background-position: 47% 0%;
+	}
+}
+
+.header {
+	color: #d5f9de;
+	background-color: #7d84b2;
+	display: flex;
+	justify-content: space-around;
+}
+
+#wheel-container {
+	width: 400px;
+	height: 400px;
+}
+
+.inner-circle {
+	color: red;
+	background-color: red;
+}
+
+.highlight {
+	opacity: 1;
+	box-shadow: 0 0 40px 15px #0ff;
 }
