--- a/src/index.css
+++ b/src/index.css
@@ -2,16 +2,17 @@
 	margin: 0;
 	padding: 0;
 	font-family: Helvetica, Arial, sans-serif;
+	box-sizing: border-box;
 }
 
 body {
-	margin: 0;
+	margin: 0%;
+	width: 100%;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
 		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
 		sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	/* background-color: #8fa6cb; */
 	background: linear-gradient(360deg, #8aa399, #7d84b2, #8fa6cb);
 	background-size: 400% 400%;
 	animation: gradientFade 12s ease infinite;
@@ -30,10 +31,12 @@ body {
 }
 
 .header {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 	color: #d5f9de;
 	background-color: #7d84b2;
-	display: flex;
-	justify-content: space-around;
 }
 
 #wheel-container {
@@ -46,15 +49,14 @@ body {
 	background-color: red;
 }
 
-.highlight {
-	opacity: 1;
-	box-shadow: 0 0 40px 15px #0ff;
-}
-
 .main {
+	width: 100%;
 	display: grid;
-	grid-template-rows: 1fr 1fr 1fr;
-	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-columns: repeat(auto-fit, minmax(175px, 1fr));
+
+	grid-template-rows: repeat(auto-fit, minmax(175px, 1fr));
+
+	grid-auto-flow: column;
 }
 
 .results-div {
