--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@600&family=Roboto:wght@300;400;500;700;900&display=swap');
+
 * {
 	margin: 0;
 	padding: 0;
-	font-family: Helvetica, Arial, sans-serif;
+	font-family: 'dosis', 'Helvetica Neue', sans-serif;
 	box-sizing: border-box;
 }
 
 body {
 	margin: 0%;
 	width: 100%;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-		sans-serif;
+	font-family: 'dosis', 'Helvetica Neue', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	background: linear-gradient(
@@ -42,9 +42,9 @@ body {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-  opacity: .5;
 	color: white;
-	background-color: black;
+	background-color: #363636;
+	line-height: 35px;
 }
 
 #wheel-container {
@@ -53,7 +53,7 @@ body {
 }
 
 .inner-circle {
-	color: red;
+	color: #fff9c4;
 	background-color: red;
 }
 
